# sqlx-todo-app

./: .env  Cargo.toml
src/: error.rs  lib.rs  models.rs
src/repository/: mod.rs  sqlx_repository.rs
src/routes/: mod.rs  task_routes.rs
